--- a/Passport/Info.plist
+++ b/Passport/Info.plist
@@ -24,6 +24,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>需要访问您的相册，请点击允许</string>
+    <key>CFBundleAllowMixedLocalizations</key>
+    <true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
