--- a/Passport/Info.plist
+++ b/Passport/Info.plist
@@ -57,5 +57,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
+	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>aa</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>bb</string>
+	<key>LSApplicationCategoryType</key>
+	<dict>
+		<key>Allow Arbitrary Loads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
