--- a/Passport/Info.plist
+++ b/Passport/Info.plist
@@ -68,5 +68,30 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
+	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>aa</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>bb</string>
+	<key>LSApplicationCategoryType</key>
+	<dict>
+		<key>Allow Arbitrary Loads</key>
+		<true/>
+	</dict>
+    <key>UIAppFonts</key>
+    <array>
+        <string>Keep_font.ttf</string>
+        <string>TradeGothicLTStd.otf</string>
+        <string>ArchivoNarrow-Regular.otf</string>
+        <string>ArchivoNarrow-Bold.otf</string>
+        <string>Padaloma-Italic.ttf</string>
+        <string>SF-Pro-Text-Semibold.otf</string>
+        <string>SF-Pro-Text-Regular.otf</string>
+        <string>SF-Pro-Text-Bold.otf</string>
+        <string>SF-Pro-Display-Semibold.otf</string>
+        <string>SF-Pro-Display-Regular.otf</string>
+        <string>SF-Pro-Display-Bold.otf</string>
+    </array>
 </dict>
 </plist>
